name:           RedPill
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Kristen

executable RedPill
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   Win32
  ghc-options:     -Wall
  other-modules:   
                   RedPill.Window.VirtualKey,
                   RedPill.Window.WindowStyle,
                   RedPill.Window.Win32.Window,
                   RedPill.Graphics.D3D11.Renderer

